--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,12 @@
    box-sizing: border-box;
 }
 
+html {
+   scroll-behavior: smooth;
+}
+
 body {
+   overflow-y: scroll;
    margin: 0;
    font: 400 1rem 'DM Sans', sans-serif;
    color: var(--text-color);
@@ -30,6 +35,7 @@ body {
    -webkit-font-smoothing: antialiased;
 }
 
+.title,
 h1,
 h2,
 h3,
@@ -69,8 +75,17 @@ img {
    height: 1px;
    background: linear-gradient(
       270deg,
-      hsl(var(--hue), 36%, 57%) 0%,
-      hsla(var(--hue), 65%, 88%, 0.34) 100%
+      hsla(var(--hue), 36%, 57%, 1),
+      hsla(var(--hue), 65%, 88%, 0.34)
+   );
+}
+
+.divider-2 {
+   height: 1px;
+   background: linear-gradient(
+      270deg,
+      hsla(var(--hue), 65%, 88%, 0.34),
+      hsla(var(--hue), 36%, 57%, 1)
    );
 }
 
@@ -86,7 +101,11 @@ img {
    background: var(--body-color);
 }
 
-.header nav {
+.header.scroll {
+   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1);
+}
+
+nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
@@ -94,10 +113,86 @@ img {
    width: 100%;
 }
 
+nav .menu {
+   opacity: 0;
+   visibility: hidden;
+   top: -100%;
+   transition: top 0.2s ease-in-out;
+}
+
+nav.show .menu {
+   opacity: 1;
+   visibility: visible;
+   background: var(--body-color);
+   height: 100vh;
+   width: 100vw;
+   position: fixed;
+   top: 0;
+   left: 0;
+   z-index: 1000;
+}
+
+nav .menu__list a {
+   transition: color 0.2s;
+   position: relative;
+}
+
+nav .menu__list a:hover {
+   color: var(--primary-color);
+}
+
+nav .menu__list a::after {
+   content: '';
+   width: 0;
+   height: 2px;
+   background: var(--primary-color);
+   position: absolute;
+   bottom: -1.5rem;
+   left: 0;
+   transform-origin: left;
+   transition: width 0.2s ease-in-out;
+}
+
+nav .menu__list a:hover::after {
+   width: 100%;
+}
+
+nav.show .menu__list {
+   --gap: 4rem;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   gap: var(--gap);
+   height: 100%;
+}
+
+.toggle {
+   color: var(--primary-color);
+   font-size: 1.5rem;
+   cursor: pointer;
+}
+
+nav .icon-close {
+   visibility: hidden;
+   opacity: 0;
+   position: absolute;
+   top: -1.5rem;
+   right: 1.5rem;
+   z-index: 1001;
+   transition: 0.2s;
+}
+
+nav.show .icon-close {
+   visibility: visible;
+   opacity: 1;
+   top: 1.5rem;
+}
+
 /* main styles */
 
 main {
-   margin-top: var(--header-height);
+   margin-top: calc(var(--header-height) + 2rem);
 }
 
 /* home */
@@ -115,11 +210,11 @@ main {
    right: 2.93rem;
 }
 
-.home__image-container {
+.home__img-container {
    position: relative;
 }
 
-.home__image-container::before {
+.home__img-container::before {
    position: absolute;
    content: '';
    background: var(--secondary-color);
@@ -131,12 +226,11 @@ main {
 }
 
 .home__img,
-.home__image-container::before {
+.home__img-container::before {
    border-radius: 4px;
 }
 
 .home__title {
-   font-weight: bold;
    margin-bottom: 1rem;
 }
 
@@ -159,4 +253,85 @@ main {
 .home__btn:hover {
    background: var(--alt-color);
    transition: background 0.3s;
+}
+
+/* about styles */
+
+.about__text {
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
+}
+
+.main__about {
+   display: flex;
+   flex-direction: column;
+   gap: var(--gap);
+   overflow: hidden;
+   background: white;
+}
+
+.about__img {
+   position: relative;
+}
+
+.about__img-container {
+   position: relative;
+}
+
+.about__img-container::before {
+   position: absolute;
+   content: '';
+   background: var(--secondary-color);
+   height: 100%;
+   width: 100%;
+   top: -8.3%;
+   left: -33%;
+}
+
+.about__img,
+.about__img-container::before {
+   border-radius: 4px;
+}
+
+/* services style */
+
+.services__header {
+   --gap: 1rem;
+   display: flex;
+   flex-direction: column;
+   gap: var(--gap);
+   margin-bottom: 4rem;
+}
+
+.services__header span {
+   color: var(--primary-color);
+   font-weight: 700;
+}
+
+.cards {
+   --gap: 1.5rem;
+   display: flex;
+   flex-direction: column;
+   gap: var(--gap);
+}
+
+.services__card {
+   text-align: center;
+   padding: 3.625rem 2rem;
+   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+   border-bottom: 0.25rem solid var(--primary-color);
+   border-radius: 0.25rem 0.25rem 0 0;
+}
+
+.services__card i {
+   display: block;
+   margin-bottom: 1.5rem;
+   font-size: 5rem;
+   color: var(--primary-color);
+}
+
+.card__title {
+   font-size: 1.5rem;
+   margin-bottom: 0.75rem;
 }
