--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ main {
    margin-bottom: 1rem;
 }
 
-.home__btn {
+.btn {
    display: inline-flex;
    align-items: center;
    color: var(--text-color-light);
@@ -250,7 +250,7 @@ main {
    font-weight: 500;
 }
 
-.home__btn:hover {
+.btn:hover {
    background: var(--alt-color);
    transition: background 0.3s;
 }
@@ -334,4 +334,100 @@ main {
 .card__title {
    font-size: 1.5rem;
    margin-bottom: 0.75rem;
+}
+
+/* testimonials style */
+
+.main__testimonials {
+   background: white;
+}
+
+.testimonials__header {
+   padding-right: 4.25rem;
+}
+
+.main__testimonials blockquote {
+   padding: 2rem;
+   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+   border-radius: 0.25rem;
+}
+
+.main__testimonials blockquote p {
+   position: relative;
+   text-indent: 1.875rem;
+   margin-bottom: 1.5rem;
+   color: var(--title-color);
+}
+
+.main__testimonials blockquote p span {
+   font: 700 2.5rem serif;
+   position: absolute;
+   top: -0.5rem;
+   left: -1.875rem;
+   color: var(--primary-color);
+}
+
+.main__testimonials cite {
+   display: flex;
+   align-items: center;
+   gap: 0.5rem;
+}
+
+.main__testimonials cite img {
+   border-radius: 50%;
+   width: 2rem;
+   height: auto;
+}
+
+/* swiper */
+
+.swiper-slide {
+   height: auto;
+   padding: 4rem 1rem;
+}
+
+.swiper-pagination-bullet {
+   width: 0.75rem;
+   height: 0.75rem;
+}
+
+.swiper-pagination-bullet-active {
+   background: var(--primary-color);
+}
+
+/* contact styles */
+
+.contact__text header {
+   padding-right: 3.875rem;
+   margin-bottom: 1rem;
+}
+
+.contact__text p {
+   margin-bottom: 2rem;
+}
+
+.main__contact .btn i {
+   margin-right: 0.625rem;
+   font-size: 1.5rem;
+}
+
+.contact__links {
+   margin-top: 4rem;
+}
+
+.contact__links ul {
+   display: flex;
+   flex-direction: column;
+   gap: 2rem;
+}
+
+.contact__links ul li {
+   display: flex;
+   align-items: center;
+}
+
+.contact__links i {
+   color: var(--primary-color);
+   font-size: 1.5rem;
+   margin-right: 0.75rem;
 }
