--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?yilmx5');
-  src:  url('fonts/icomoon.eot?yilmx5#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?yilmx5') format('truetype'),
-    url('fonts/icomoon.woff?yilmx5') format('woff'),
-    url('fonts/icomoon.svg?yilmx5#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?dh9k6q');
+  src:  url('fonts/icomoon.eot?dh9k6q#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?dh9k6q') format('truetype'),
+    url('fonts/icomoon.woff?dh9k6q') format('woff'),
+    url('fonts/icomoon.svg?dh9k6q#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e90c";
+}
 .icon-phone:before {
   content: "\e900";
 }
